update:修改toList()为collect(Collectors.toList())