@@ -23,6 +23,7 @@ import java.io.IOException;
 import java.lang.reflect.Field;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 请求委托器
@@ -111,7 +112,7 @@ public interface RequestDelegate {
             // 找出鉴权参数
             fieldList = fieldList.stream()
                     .filter(f -> f.isAnnotationPresent(AuthParam.class))
-                    .toList();
+                    .collect(Collectors.toList());
 
             // 没有返回
             if (ListUtil.isEmpty(fieldList)) {
